@@ -121,3 +121,5 @@
 "Shell"="シェル";
 "Emulation"="エミュレーション";
 "Color"="カラー";
+
+"Script"="スクリプト";
